--- a/src/app/newproduct/newproduct.component.html
+++ b/src/app/newproduct/newproduct.component.html
@@ -63,7 +63,7 @@
         {
         <div class="row">
             <div class="col-12 text-center">
-                <h4>No Product Found</h4>
+                <h4>No Plans Found</h4>
             </div>
         </div>
         }
@@ -79,7 +79,7 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Add New Product</h4>
+                        <h4 class="modal-title">Add New Plans</h4>
                         <button type="button" class="btn-close" (click)="closeModal()"></button>
                     </div>
 
@@ -91,21 +91,21 @@
 
                         <div class="row">
                             <div class="col-6">
-                                <label for="">Product Name</label>
+                                <label for="">Plan Name</label>
                                 <input type="text" [(ngModel)]="productObj.name" class="form-control"
-                                    placeholder="Product Name">
+                                    placeholder="Plan Name">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <label for="">Product Price</label>
+                                <label for="">Plan Price</label>
                                 <input type="text" [(ngModel)]="productObj.price" class="form-control"
-                                    placeholder="Product Price">
+                                    placeholder="Plan Price">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <label for="">Product Description</label>
+                                <label for="">Plan Description</label>
                                 <textarea rows="3" [(ngModel)]="productObj.description"
                                     class="form-control"></textarea>
 
